# tinydl

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.py
examples/: train_fashion_mnist.py  train_fashion_mnist_conv.py  train_fashion_mnist_resnet.py  worklog.txt
src/: CMakeLists.txt  autograd.cpp  autograd.h  elementwise.cu  elementwise.h  opr_utils.h  reduction.cu  reduction.h  tensor.cpp  tensor.h  tinydl.cpp
src/opr/: CMakeLists.txt  dtype.cu  dtype.h  elementwise.cu  elementwise.h  matmul.cu  matmul.h  opr_utils.h  reduction.cu  reduction.h  trans_layout.cu  trans_layout.h
src/opr/cudnn/: batchnorm.cpp  batchnorm.h  common.cpp  common.h  conv.cu  conv.h
tests/: test.py
tinydl/: __init__.py  operators.py  tensor.py
tinydl/nn/: __init__.py  init.py  module.py
tinydl/optim/: sgd.py
